Fixed Windows local React build
Added server side Swagger build
Added debugging console.logs
Commented out most console.logs
Tried to get Swagger to use auth tokens
Have Swagger using local or server URI
