# src/api/swagger.js
@@ -1,12 +1,28 @@
 const swaggerAutogen = require('swagger-autogen')();
+const env = process.env.NODE_ENV;
+const host = env && env.trim() === "development" ? 'localhost:8080' : "appmarketplace.ericsgear.com";
 
 const doc = {
   info: {
     title: "Eric's Gear Marketplace API",
     description: ''
   },
-  host: 'localhost:3002',
-  schemes: ['http','https']
+  host: host,
+  schemes: ['http','https'],
+  securityDefinitions: {
+    Bearer:
+    {
+        type: "apiKey",
+        name: "Authorization",
+        in: "header",
+        description: 'Enter the token with the `Bearer: ` prefix, e.g. "Bearer abcde12345".'
+    }
+  },
+  security: [
+    {
+      bearerAuth: [],
+    },
+  ]
 };
 
 const outputFile = './swagger-output.json';
